<resources>
    <string name="app_name">Better Trade App</string>
    <string name="login_google">Login with Google</string>
    <string name="logout">Logout</string>
    <string name="login_email_pass">Login with email</string>
    <string name="finalize_login_email_pass">Login</string>
    <string name="text_register">Or register here</string>
    <string name="register">Register</string>
    <string name="have_an_account_text">Already have an account? Sign in here.</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="cancel_edit_profile_text">Cancel</string>
    <string name="title_activity_maps_test">Map</string>
</resources>
